Expose correction impacts through BAP
